# openai-quickstart

./: README.md  pyproject.toml
openai_quickstart/: load_env.py  my_first_request.py
